// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service stops -> departure group utils snapshot - should group data from address 1`] = `
Array [
  Object {
    "quays": Array [
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599984_35_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599986_39_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599988_43_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599990_47_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599992_51_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Sjetnmarka via Kroppanm.-Okstad",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599985_37_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599987_41_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599989_45_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599991_49_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599993_53_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "City Syd via Kroppanmarka",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600025_117_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600027_121_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600029_125_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600031_129_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600033_133_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Okstad via Kroppanmarka",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599969_5_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "City Syd via Kroppanm.-Okstad",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74012",
          "latitude": 63.40766,
          "longitude": 10.403871,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599815_44_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599816_46_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599817_48_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599818_50_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599819_52_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Trondheim S",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74013",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74013",
          "latitude": 63.40819,
          "longitude": 10.403856,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
    ],
    "stopPlace": Object {
      "__typename": "StopPlace",
      "description": "",
      "id": "NSR:StopPlace:43153",
      "latitude": 63.407925,
      "longitude": 10.403864,
      "name": "Sorgenfri",
    },
  },
  Object {
    "quays": Array [
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599816_46_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599817_48_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599818_50_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599819_52_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599820_54_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Trondheim S",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74625",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74625",
          "latitude": 63.40386,
          "longitude": 10.405286,
          "name": "Anton Grevskotts veg",
          "publicCode": "",
          "situations": Array [],
        },
      },
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599984_35_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599986_39_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599988_43_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599990_47_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599992_51_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Sjetnmarka via Kroppanm.-Okstad",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74626",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599985_37_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599987_41_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599989_45_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599991_49_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599993_53_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "City Syd via Kroppanmarka",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74626",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600025_117_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600027_121_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600029_125_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600031_129_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600033_133_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Okstad via Kroppanmarka",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74626",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599969_5_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "City Syd via Kroppanm.-Okstad",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74626",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74626",
          "latitude": 63.403484,
          "longitude": 10.406089,
          "name": "Anton Grevskotts veg",
          "publicCode": "",
          "situations": Array [],
        },
      },
    ],
    "stopPlace": Object {
      "__typename": "StopPlace",
      "description": null,
      "id": "NSR:StopPlace:43488",
      "latitude": 63.403672,
      "longitude": 10.405687,
      "name": "Anton Grevskotts veg",
    },
  },
  Object {
    "quays": Array [
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361223_14_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361240_16_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361256_18_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329232359196_73_200109141539610",
              "lineName": "Klæbu",
              "lineNumber": "73",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081384402_40_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081424420_44_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081424437_46_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081424463_50_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081424491_52_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200603081383720_10_200109141539610",
              "lineName": "Ratesvingen",
              "lineNumber": "10",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081429323_42_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081429342_48_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081429361_54_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081429379_60_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081429397_66_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200603081383720_10_200109141539610",
              "lineName": "Rate",
              "lineNumber": "10",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099695_12_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234096848_18_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234096868_30_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099695_12_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234096848_18_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329234095433_74_200109141539610",
              "lineName": "Spillebakken",
              "lineNumber": "74",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234097266_14_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234097283_16_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234097059_20_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234097076_22_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234097092_24_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329234095433_74_200109141539610",
              "lineName": "Flatjord",
              "lineNumber": "74",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361272_20_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361288_22_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361304_24_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361321_26_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361337_28_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329232359196_73_200109141539610",
              "lineName": "Klæbu sentrum",
              "lineNumber": "73",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:53_200109141602636_2_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544139_53_200109141539610",
              "lineName": "Sandmoen via Sluppen",
              "lineNumber": "53",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:54_200109141602638_2_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544140_54_200109141539610",
              "lineName": "Sandmoen via Sluppen-Tiller",
              "lineNumber": "54",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603744_4_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603745_6_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603746_10_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603747_14_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603748_16_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544150_79_200109141539610",
              "lineName": "Sluppen",
              "lineNumber": "79",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361729_6_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329232359196_73_200109141539610",
              "lineName": "Klæbu - Sørborgen skole",
              "lineNumber": "73",
              "notices": Array [],
              "quayId": "NSR:Quay:72049",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:72049",
          "latitude": 63.40377,
          "longitude": 10.398834,
          "name": "Siemens",
          "publicCode": "",
          "situations": Array [],
        },
      },
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081426811_43_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081426829_45_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081430068_47_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081426848_49_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081426867_51_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200603081383720_10_200109141539610",
              "lineName": "Sæterbakken via sentrum",
              "lineNumber": "10",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234098424_15_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099560_17_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234098441_19_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234098118_21_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234098135_25_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329234095433_74_200109141539610",
              "lineName": "Tempe",
              "lineNumber": "74",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360464_13_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360482_15_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360498_17_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360990_19_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360784_23_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329232359196_73_200109141539610",
              "lineName": "Tempe",
              "lineNumber": "73",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361007_21_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232361024_25_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360817_29_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360531_35_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:73_200329232360547_37_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329232359196_73_200109141539610",
              "lineName": "Bratsbergvegen",
              "lineNumber": "73",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603699_19_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603700_21_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141606568_23_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603701_25_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:79_200109141603702_27_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544150_79_200109141539610",
              "lineName": "Vikhammeråsen via Brattøra",
              "lineNumber": "79",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099335_23_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099578_31_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099352_3_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099317_7_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:74_200329234099560_17_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200329234095433_74_200109141539610",
              "lineName": "Bratsbergvegen",
              "lineNumber": "74",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081428738_91_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081428756_101_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081431064_107_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081431083_113_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:10_200603081431102_119_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200603081383720_10_200109141539610",
              "lineName": "Vikåsen via sentrum-Strindheim",
              "lineNumber": "10",
              "notices": Array [],
              "quayId": "NSR:Quay:72050",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:72050",
          "latitude": 63.4039,
          "longitude": 10.399121,
          "name": "Siemens",
          "publicCode": "",
          "situations": Array [],
        },
      },
    ],
    "stopPlace": Object {
      "__typename": "StopPlace",
      "description": null,
      "id": "NSR:StopPlace:42087",
      "latitude": 63.403835,
      "longitude": 10.398978,
      "name": "Siemens",
    },
  },
]
`;

exports[`service stops -> departure group utils snapshot - should group data from address with favorites 1`] = `
Array [
  Object {
    "quays": Array [
      Object {
        "group": Array [],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74012",
          "latitude": 63.40766,
          "longitude": 10.403871,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599816_46_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599817_48_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599818_50_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599819_52_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599820_54_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Trondheim S",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74013",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74013",
          "latitude": 63.40819,
          "longitude": 10.403856,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
    ],
    "stopPlace": Object {
      "__typename": "StopPlace",
      "description": "",
      "id": "NSR:StopPlace:43153",
      "latitude": 63.407925,
      "longitude": 10.403864,
      "name": "Sorgenfri",
    },
  },
]
`;

exports[`service stops -> departure group utils snapshot - should group data from venue 1`] = `
Array [
  Object {
    "quays": Array [
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600001_69_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600003_73_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600005_77_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600007_81_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600009_85_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "City Syd via Kroppanmarka",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600002_71_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600004_75_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600006_79_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600008_83_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600010_87_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Sjetnmarka via Kroppanm.-Okstad",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600025_117_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600027_121_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600029_125_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600031_129_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141600033_133_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Okstad via Kroppanmarka",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": false,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599969_5_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "City Syd via Kroppanm.-Okstad",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74012",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74012",
          "latitude": 63.40766,
          "longitude": 10.403871,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599830_74_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599831_76_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599832_78_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599833_80_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599834_82_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Trondheim S",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74013",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74013",
          "latitude": 63.40819,
          "longitude": 10.403856,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
    ],
    "stopPlace": Object {
      "__typename": "StopPlace",
      "description": "",
      "id": "NSR:StopPlace:43153",
      "latitude": 63.407925,
      "longitude": 10.403864,
      "name": "Sorgenfri",
    },
  },
]
`;

exports[`service stops -> departure group utils snapshot - should group data from venue with favorites 1`] = `
Array [
  Object {
    "quays": Array [
      Object {
        "group": Array [],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74012",
          "latitude": 63.40766,
          "longitude": 10.403871,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
      Object {
        "group": Array [
          Object {
            "departures": Array [
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599832_78_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599833_80_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599834_82_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599835_84_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
              Object {
                "aimedTime": undefined,
                "predictionInaccurate": false,
                "realtime": true,
                "serviceJourneyId": "ATB:ServiceJourney:24_200109141599836_86_200109141539610",
                "situations": Array [],
                "time": undefined,
              },
            ],
            "lineInfo": Object {
              "lineId": "ATB:Line:200109141544126_24_200109141539610",
              "lineName": "Trondheim S",
              "lineNumber": "24",
              "notices": Array [],
              "quayId": "NSR:Quay:74013",
              "transportMode": "bus",
              "transportSubmode": "localBus",
            },
          },
        ],
        "quay": Object {
          "__typename": "Quay",
          "description": null,
          "id": "NSR:Quay:74013",
          "latitude": 63.40819,
          "longitude": 10.403856,
          "name": "Sorgenfri",
          "publicCode": "",
          "situations": Array [],
        },
      },
    ],
    "stopPlace": Object {
      "__typename": "StopPlace",
      "description": "",
      "id": "NSR:StopPlace:43153",
      "latitude": 63.407925,
      "longitude": 10.403864,
      "name": "Sorgenfri",
    },
  },
]
`;
